# django-typed-models

./: pyproject.toml
typedmodels/: models.py
