[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37', 'py38', 'py39', 'py310']
skip-string-normalization = true
include = '\.pyi?$'

[tool.poetry]
name = "django-typed-modes"
description = "Sane single table model inheritance for Django"
version = "0.14.0"
license = "BSD"
packages = [
  { include = "typedmodels" }
]

authors = [
  "Craig de Stigter <craig@destigter.nz>",
]

readme = "README.md"

repository = "http://github.com/craigds/django-typed-models"

keywords = [
  "django",
  "django-typed-models",
  "STI",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = false
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3.2,<5.1"

[tool.poetry.group.dev.dependencies]
black = ">=22.12,<24.0"
pytest = "^7.4.3"
pytest-cov = "^4.1"
pytest-randomly = "^3.15"
pytest-django = "^4.5.2"
hypothesis = "^6.87.1"

[tool.setuptools.package-data]
"django-typed-models" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["typedmodels"]
